2004-02-17  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/convert-ly.py (2.1.22): Corrected documentation printout.

2004-02-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/note-collision.cc (check_meshing_chords): only wipe heads
	if necessary. Else, simply wipe dots.

	* input/test/beam-alternate.ly: new file

	* input/test/piano-staff-distance.ly: new file.

	* lily/translator-group.cc (recurse_down_translators): use
	Direction for bottom-up/top-down.

	* lily/include/translator.hh (class Translator): add
	process_music() and do_announces(). This obviates
	recurse_down_{engravers,performers}.

	* ly/declarations-init.ly (melismaEnd): use ManualMelismaEvent for
	\melisma and \melismaEnd

	* lily/melisma-engraver.cc (process_music): change to
	Melisma_translator, unify with performer. Accept
	ManualMelismaEvent.

	* ly/engraver-init.ly: add Font_size_engraver.

2004-02-16  Heikki Junes  <hjunes@cc.hut.fi>

	* lily/align-interface.cc, lily/axis-group-engraver.cc: spell
	it hara-kiri.

	* input/regression/{many}.ly: improve descriptions trying to figure
	out what is tested.

2004-02-16  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/slur.cc (broken_trend_offset): robustness fix.

	* VERSION: release 2.1.24

	* lily/context.cc (find_create_context): go to Score if it exists.

	* lily/context-scheme.cc: new file.

	* lily/score-translator.cc (get_output): new file.

	* lily/include/grob-info.hh: origin_contexts() now does not
	include the originating engraver

	* lily/translator-group.cc (translator_each): clean up contents,
	remove superfluous stubs. Engraver_group_engraver and
	Performer_group_performer are the only classes using multiple
	inheritance.

	* lily/include/score-context.hh (class Score_context): interface
	between Score_{engraver,performer} and Global_context.

	* lily/include/global-context.hh (Context): change from
	global-translator. This is the entry point for contexts; it is not